# patch-md

./: Cargo.toml  PATCH.md  README.md  SPEC.md
docs/: README.md
docs/journeys/: 01-real-world-testing.md  02-ai-resolve-real-world-test.md  README.md
docs/scenarios/: 01-config-file-customization.md  02-css-theme-customization.md  03-environment-settings.md  04-multi-file-changes.md  05-library-version-pinning.md  README.md
src/: cli.rs  diff_engine.rs  main.rs  merge_engine.rs  patch_md.rs
src/commands/: mod.rs
src/models/: mod.rs
